chore: transfer computers

--- a/pages/documentation/src/index.scss
+++ b/pages/documentation/src/index.scss
@@ -10,3 +10,8 @@
 html {
     background-color: #efefef;
 }
+
+.homebanner {
+  background: rgb(160,155,240);
+  background: linear-gradient(90deg, rgba(160,155,240,1) 0%, rgba(38,38,180,1) 35%, rgba(0,212,255,1) 100%);
+}
